[tool.poetry]
name = "exxplore"
version = "0.1.0"
description = ""
authors = ["MaGeKo-Exxeta <matti.gerrit.korff@exxeta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
streamlit = "^1.20.0"
pandas = "^1.5"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pylint = "^2.17.2"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
